<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dice_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="monospace"
        android:onClick="rollDice"
        android:padding="@dimen/dice_num_padd"
        android:text="@string/dice_num_default"
        android:textColor="@color/dice_fg"
        android:textSize="@dimen/dice_num_size"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/die_config_count_label_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/die_config_count" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/die_config_count_count_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:text="@string/default_die_num"
                android:textAlignment="textEnd" />

            <SeekBar
                android:id="@+id/die_config_count_bar_main"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:max="9"
                android:progress="0" />
        </LinearLayout>

        <TextView
            android:id="@+id/die_config_sides_label_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/die_config_sides" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/die_config_sides_count_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:text="@string/default_die_sides"
                android:textAlignment="textEnd" />

            <SeekBar
                android:id="@+id/die_config_sides_bar_main"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:max="28"
                android:progress="4" />
        </LinearLayout>

    </LinearLayout>

    <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="runDieConfig"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" /> -->
</androidx.constraintlayout.widget.ConstraintLayout>